# tamr-cloud-sdk-python

./: .gitignore  .releaserc.yaml  Makefile  README.md  install_proto.sh  link_python_grpc_plugin.sh  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  ruff.toml  setup.py
.github/workflows/: ci.yml  generate_stub.yml
cicd/scripts/: lint-commits.sh
docs/doctrees/: examples.doctree
docs/html/_sources/: client.rst.txt
docs/html/_sources/modules/: jobs.rst.txt
docs/latest/doctrees/: client.doctree  environment.pickle  index.doctree  modules.doctree  reference.doctree
docs/latest/doctrees/modules/: jobs.doctree  utils.doctree
docs/latest/html/: .buildinfo  client.html  examples.html  genindex.html  index.html  modules.html  objects.inv  reference.html  search.html  searchindex.js
docs/latest/html/_modules/: index.html
docs/latest/html/_sources/: index.md.txt  modules.md.txt  reference.md.txt
docs/latest/html/modules/: jobs.html  utils.html
docs_src/: conf.py  examples.md  examples.rst  index.md
examples/: config.template.yaml  list_jobs.py
examples/jobs/: list_jobs.py  poll_job.py
proto/protoc-gen-openapiv2/options/: openapiv2.proto
proto/tamr/api/v1beta1/: errors.proto  jobs.proto
protoc_gen_openapiv2/options/: annotations_pb2.py  annotations_pb2_grpc.py  openapiv2_pb2.py  openapiv2_pb2_grpc.py
tamr/api/v1beta1/: errors_pb2.py  errors_pb2.pyi  errors_pb2_grpc.py  jobs_pb2.py  jobs_pb2.pyi  jobs_pb2_grpc.py
tamr_sdk/: __init__.py  api_client.py
tamr_sdk/jobs/: __init__.py  jobs_client.py
tamr_sdk/utils/: handler.py
(+5 files in other folders)
